# barkml

./: CHANGELOG.md  Cargo.toml  README.md
examples/: example.bml  example.bmls
examples/append.d/: 01-second.bml
examples/config_append/: 00-first.bml  01-second.bml
src/: error.rs  idl.rs  lib.rs  loader.rs  macro.rs  ser.rs  statement.rs  value.rs
src/ast/: mod.rs  scope.rs  statement.rs  types.rs  value.rs
src/lang/: ast.rs  error.rs  lexer.rs  mod.rs  parser.rs  read.rs  scope.rs
src/load/: mod.rs  standard.rs  walk.rs
src/syn/: lexer.rs  mod.rs  parser.rs  read.rs
