[package]
name = "barkml"
version = "0.5.0"
description = "Declarative configuration language"
repository = "https://github.com/awslabs/barkml"
categories = ["config"]
authors = ["Jarrett Tierney <jmt@amazon.com>"]
license = "MIT-0"
edition = "2021"

[features]
default = []
full = ["binary"]
binary = ["dep:msgpack_simple"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
base64 = "0.22"
lz4_flex = "0.11"
msgpack_simple = { version = "1.0", optional = true }
peg = "0.8"
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
snafu = "0.8"
[dev-dependencies]
assert_matches = "1.5"
