[package]
name = "barkml"
version = "0.7.0"
description = "Declarative configuration language"
repository = "https://github.com/awslabs/barkml"
categories = ["config"]
authors = ["Jarrett Tierney <jmt@amazon.com>"]
license = "MIT-0"
edition = "2021"

[features]
default = ["full"]
full = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
base64 = "0.22"
indexmap = { version = "2.2", features = ["serde"] }
logos = "0.14"
semver = { version = "1.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
snafu = "0.8"
uuid = { version = "1.8", features = ["serde", "v7"] }

[dev-dependencies]
assert_matches = "1.5"
